--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,54 @@
 /* Universal Selector */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     font-family: sans-serif;
     font-size: 16px;
 }
 
 /* Header Section */
+header {
+    display: fixed;
+    position: relative;
+    top: 0;
+    height: 3rem;
+    width: 100%;
+    background-color: #1900ff;
+    color: #fff;
+    text-align: center;
+}
 
-/* About me Selector */
+header nav {
+    height: 100%;
+}
+
+header nav ul {
+    height: 100%;
+    display: grid;
+    grid:
+        "home aboutme projects contact" 
+        1fr / 1fr 1fr 1fr 1fr;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li {
+    border: #fff 1px solid;
+}
+
+
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+/* Footer Section */
+
+
+/* About me Page */
 #whoami {
     display: flex;
     align-items: center;
