--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
 }
 
 html {
-    font-family: sans-serif;
+    font-family: 'Quicksand', sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     font-size: 16px;
 }
 
