--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -2,8 +2,8 @@
 
 #whoami {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
 }
@@ -22,4 +22,10 @@
 #whoami .image-container img{
     width: 16rem;
     height: auto;
+}
+
+#whoami .text-container {
+    justify-content: left;
+    width: 50%;
+    padding: 1rem;
 }
